[package]
name = "rust-csv"
version = "0.1.1"
authors = ["Ryan Kennedy <rkennedy9064@gmail.com>"]
edition = "2018"

[lib]
name = "rust_csv"
crate-type = ["cdylib"]

[dependencies]
csv        = "1.1.1"
failure    = "0.1.5"
itertools  = "0.8.0"
serde      = "1.0.98"
serde_json = "1.0.40"

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]